--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@ function w3_close() {
     <h3 class="w3-border-bottom w3-border-blue w3-padding-16">Divu skaitļu summa</h3>
     <p>Uzrakstiet divus skaitļus</p>
     <form action="/action_page.php" target="_blank">
-      <input class="w3-input w3-border" type="text" placeholder="1.skaitlis" required name="1. skaitlis">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="2. skaitlis" required name="2.skaitlis">
-      <button class="w3-button w3-black w3-section" type=button">
-          <input value="Saskaitīt" name="Summa" onclick="rez.value= 1. skaitlis.value + 2.skaitlis.value">
-      </button>
+      <input class="w3-input w3-border" type="text" name="sk1" placeholder="1.skaitlis" required name="1. skaitlis">
+      <input class="w3-input w3-section w3-border" name="sk2" type="text" placeholder="2. skaitlis" required name="2.skaitlis">
+      <div>
+       <input value="Saskaitīt" name="Summa" onclick="rez.value= sk1.value - (-1)*sk2.value" type="button" color="red">
+      </div>
       <input class="w3-input w3-section w3-border" name="rez">
     </form>
   </div>
-  
 </body>
 </html>
