--- a/index.html
+++ b/index.html
@@ -121,5 +121,7 @@ function w3_close() {
       <input class="w3-input w3-section w3-border" name="rez">
     </form>
   </div>
+    <br>
+    <a href="otrais.html"> <img scr="images/Bulta.png" alt="bulta"></a>
 </body>
 </html>
