--- a/otrais.html
+++ b/otrais.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>Daļa no portfolio :)</title>
+        <title>Daļa no portfolio</title>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,7 +13,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     <body>
           <div class="w3-container w3-padding-32" id="summa">
     <h3 class="w3-border-bottom w3-border-blue w3-padding-16">Divu skaitļu summa</h3>
-    <p>Uzrakstiet divus skaitļus</p>
+    <p>Uzrakstiet divus skaitļus :)</p>
     <form action="/action_page.php" target="_blank">
       <input class="w3-input w3-border" type="text" name="sk1" placeholder="1.skaitlis" required name="1. skaitlis">
       <input class="w3-input w3-section w3-border" name="sk2" type="text" placeholder="2. skaitlis" required name="2.skaitlis">
