--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
-
+body,h1,h2,h3,h4,h5,h6 {font-family: "Book Antiqua", sans-serif}
+.w3-border{color: #bed7ff !important;}
+.w3-bar-block .w3-bar-item {padding:20px}
+body{background-color#EAF2FF;}
+.w3-top{background-color:#bed7ff;}
+.w3-bar-item:hover{background-color:#6ea5ff !important; color:white !important;}
 </style>
 </head>
 <body>
