--- a/otrais.html
+++ b/otrais.html
@@ -5,25 +5,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>Daļa no portfolio</title>
+        <title>Ergonomiska darba vieta</title>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="css/mansStils.css">
     </head>
     <body>
-          <div class="w3-container w3-padding-32" id="summa">
-    <h3 class="w3-border-bottom w3-border-blue w3-padding-16">Divu skaitļu summa</h3>
-    <p>Uzrakstiet divus skaitļus :)</p>
-    <form action="/action_page.php" target="_blank">
-      <input class="w3-input w3-border" type="text" name="sk1" placeholder="1.skaitlis" required name="1. skaitlis">
-      <input class="w3-input w3-section w3-border" name="sk2" type="text" placeholder="2. skaitlis" required name="2.skaitlis">
-      <div>
-       <input value="Saskaitīt" name="Summa" onclick="rez.value= sk1.value - (-1)*sk2.value" type="button" color="red">
-      </div>
-      <input class="w3-input w3-section w3-border" name="rez">
-    </form>
-  </div>
-        <div></div>
-        <a href="index.html"> <img scr="images/Bulta.png"  alt="bulta"></a>
+        <h1>Kāda ir ergonomiska darba vieta?</h1>
+        <br>
+    Ja esi cilvēks, kurš strādā pie datora, noteikti lielāko dienas daļu pavadi, sēžot pie galda. Tomēr gadījumā, ja darba vieta nav atbilstoša noteiktiem parametriem, var rasties diskomforts, kas vēlāk negatīvi ietekmēs ne tikai kopējo labsajūtu, bet arī fizisko veselību. Lasi rakstu un uzzini, cik nozīmīga ir ergonomiska darba vieta un kā parūpēties, lai tā kļūtu piemērota produktīvai darba veikšanai.
+    <br>
+    Ergonomika ir zinātnes nozare, kas veic darba spēju un darba procesa ierobežojošo faktoru analīzi. Šīs nozares mērķis ir pielāgot darba vidi, lai strādāšana būtu maksimāli ērta, produktīva un neradītu veselības problēmas. Ergonomiska darba vieta ir atbilstoša cilvēka individuālajiem parametriem, ļaujot katram justies ērti un veikt savu darbu iespējami efektīvi. Ievēro pamata nosacījumus un pielāgo vidi tā, lai strādāšana nesagādātu nepatīkamas izjūtas.
+    <br>
+    <a href="index.html"> <img src="images/Bulta.png" style="width:100px"  alt="bulta"></a>
     </body>
 </html>
