--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="w3-row-padding w3-padding-16 w3-center" >
     <div class="w3-half"  >
-      <img id="gimp"src="images/gimp.png" alt="Gimp" style="width:80%">
+      <img id="gimp"src="images/gimp.PNG" alt="Gimp" style="width:80%">
       <h3>Gimp</h3>
       <p>Pārveidojām bildes lietotnē Gimp</p>
     </div>
