--- a/otrais.html
+++ b/otrais.html
@@ -18,6 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     <br>
     Ergonomika ir zinātnes nozare, kas veic darba spēju un darba procesa ierobežojošo faktoru analīzi. Šīs nozares mērķis ir pielāgot darba vidi, lai strādāšana būtu maksimāli ērta, produktīva un neradītu veselības problēmas. Ergonomiska darba vieta ir atbilstoša cilvēka individuālajiem parametriem, ļaujot katram justies ērti un veikt savu darbu iespējami efektīvi. Ievēro pamata nosacījumus un pielāgo vidi tā, lai strādāšana nesagādātu nepatīkamas izjūtas.
     <br>
+    <a href="https://www.ajprodukti.lv/blogs/ergonomiska-darba-vide/ergonomika-darba-vieta-kadel-ta-ir-svariga-tavai-veselibai"> ajprodukti.lv</a> <br>
     <a href="index.html"> <img src="images/Bulta.png" style="width:100px"  alt="bulta"></a>
     </body>
 </html>
