--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="w3-row-padding w3-padding-16 w3-center" >
     <div class="w3-half"  >
-      <img id="gimp"src="images/gimp.png" alt="Gimp" style="width:80%">
+      <img id="gimp"src="images/gimp.PNG" alt="Gimp" style="width:80%">
       <h3>Gimp</h3>
       <p>Pārveidojām bildes lietotnē Gimp</p>
     </div>
@@ -51,7 +51,7 @@
     
   <div class="w3-row-padding w3-padding-16 w3-center" style="max-width:1200px;margin-top:100px">
         <div class="w3-half">
-      <img id="3D" src="images/logogab.jpg" alt="3D puzles gabaliņš" style="width:80%">
+      <img id="3D" src="images/logogab.JPG" alt="3D puzles gabaliņš" style="width:80%">
       <h3>3D puzle</h3>
       <p>Izmantojām mājaslapu Tinkercad, lai izveidotu reklāmas suvenīru uzņēmumam</p>
     </div>
@@ -79,7 +79,7 @@
   <div class="w3-row-padding w3-padding-16 w3-center">
       
     <div class="w3-half">
-      <img id="ex" src="images/excel.png" alt="Excel" style="width:80%">
+      <img id="ex" src="images/excel.PNG" alt="Excel" style="width:80%">
       <h3>Excel</h3>
       <p>Mācījāmies jaunas lietas Excel lietotnē</p>
     </div>
