--- a/otrais.html
+++ b/otrais.html
@@ -14,11 +14,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     <body>
         <h1>Kāda ir ergonomiska darba vieta?</h1>
         <br>
-    Ja esi cilvēks, kurš strādā pie datora, noteikti lielāko dienas daļu pavadi, sēžot pie galda. Tomēr gadījumā, ja darba vieta nav atbilstoša noteiktiem parametriem, var rasties diskomforts, kas vēlāk negatīvi ietekmēs ne tikai kopējo labsajūtu, bet arī fizisko veselību. Lasi rakstu un uzzini, cik nozīmīga ir ergonomiska darba vieta un kā parūpēties, lai tā kļūtu piemērota produktīvai darba veikšanai.
-    <br>
+   Saskaņā ar AJ Produkti, ergonomiska darba vieta sākas ar pareizi izvēlētām mēbelēm, piemēram, regulējamu krēslu un galdu. Krēslam jābūt ar regulējamu atzveltni, kas atbalsta muguru jostas daļā, un roku balstiem, kas novietoti tuvu ķermenim, lai mazinātu plecu un elkoņu sasprindzinājumu. Augstumā regulējams galds ļauj mainīt darba pozīciju no sēdus uz stāvus, tādējādi samazinot ilgstošas sēdēšanas radīto slodzi. Tāpat svarīgs ir monitora novietojums — tam jāatrodas izstieptas rokas attālumā, ar augšējo malu acu līmenī, lai acis skatītos nedaudz lejup un nenogurtu. Papildu aksesuāri, piemēram, roku balsti un dokumentu turētāji, palīdz uzturēt dabisku ķermeņa stāvokli, mazinot kakla un plecu saspringumu.
+<br>
+Savukārt 1a.lv uzsver telpas plānojuma un mikroklimata nozīmi. Ergonomiska darba vieta ietver pārdomātu logu, durvju un apgaismojuma izvietojumu — galdam jābūt perpendikulāri logam, lai izvairītos no atspīdumiem ekrānā, bet dabiskā gaisma veicinātu acu atpūtu. Apgaismojumam jābūt pietiekamam, bet ne pārāk spilgtam, ideālā gadījumā tuvu dabiskajam spektram, lai neradītu koncentrēšanās grūtības. Telpā jānodrošina svaigs gaiss ar regulāru vēdināšanu un optimāla temperatūra — aptuveni 22 °C aukstajos mēnešos un līdz 24 °C vasarā —, lai izvairītos no diskomforta. Krēsla un galda izvēlē jāņem vērā individuālais augums, lai ceļgali un elkoņi veidotu 90 grādu leņķi, bet monitors jānovieto apmēram 60 cm attālumā no acīm.
+<br>
+Kopumā ergonomiska darba vieta apvieno pielāgojamas mēbeles, pareizu aprīkojuma izvietojumu un veselīgu darba vidi, lai strādāšana būtu ērta un nekaitētu veselībai.
+        
+        <br><br>
     Ergonomika ir zinātnes nozare, kas veic darba spēju un darba procesa ierobežojošo faktoru analīzi. Šīs nozares mērķis ir pielāgot darba vidi, lai strādāšana būtu maksimāli ērta, produktīva un neradītu veselības problēmas. Ergonomiska darba vieta ir atbilstoša cilvēka individuālajiem parametriem, ļaujot katram justies ērti un veikt savu darbu iespējami efektīvi. Ievēro pamata nosacījumus un pielāgo vidi tā, lai strādāšana nesagādātu nepatīkamas izjūtas.
     <br>
     <a href="https://www.ajprodukti.lv/blogs/ergonomiska-darba-vide/ergonomika-darba-vieta-kadel-ta-ir-svariga-tavai-veselibai"> ajprodukti.lv</a> <br>
+    <a href="https://www.1a.lv/kp/ergonomiska-darba-vieta-praktiski-ieteikumi/mp"> 1a.lv </a><br>
     <a href="index.html"> <img src="images/Bulta.png" style="width:100px"  alt="bulta"></a>
     </body>
 </html>
