--- a/otrais.html
+++ b/otrais.html
@@ -21,7 +21,9 @@ Savukārt 1a.lv uzsver telpas plānojuma un mikroklimata nozīmi. Ergonomiska da
 Kopumā ergonomiska darba vieta apvieno pielāgojamas mēbeles, pareizu aprīkojuma izvietojumu un veselīgu darba vidi, lai strādāšana būtu ērta un nekaitētu veselībai.
         
         <br><br><br>
-    <a href="https://www.ajprodukti.lv/blogs/ergonomiska-darba-vide/ergonomika-darba-vieta-kadel-ta-ir-svariga-tavai-veselibai"> ajprodukti.lv</a> <br>
-    <a href="https://www.1a.lv/kp/ergonomiska-darba-vieta-praktiski-ieteikumi/mp"> 1a.lv </a> un <a href="index.html"> <img src="images/Bulta.png" style="width:100px"  alt="bulta"></a>
+    <a href="https://www.ajprodukti.lv/blogs/ergonomiska-darba-vide/ergonomika-darba-vieta-kadel-ta-ir-svariga-tavai-veselibai"> ajprodukti.lv</a> un 
+    <a href="https://www.1a.lv/kp/ergonomiska-darba-vieta-praktiski-ieteikumi/mp"> 1a.lv </a> 
+        <br>
+        <a href="index.html"> <img src="images/Bulta.png" style="width:100px"  alt="bulta"></a>
     </body>
 </html>
